# mod

./: .buildinfo  .clang-format  .dockerignore  .drone.jsonnet  .drone.yml  .gitignore  .gitmodules  AUTHORS  Brewfile  CMakeLists.txt  ChangeLog  ChangeLog.rst  Makefile.am  NB_compile.sh  README  README.rst  _config.yml  bindep.txt  bootstrap.sh  changes.html  compiling.html  configure.ac  generateAutomakeFiles.sh  genindex.html  index.html  index.md  installation.html  jla_build.sh  knownIssues.html  objects.inv  profileCompilation.sh  py-modindex.html  references.html  repo-bootstrap.sh  requirements.txt  requirements_dev.txt  requirements_nodoc.txt  search.html  searchindex.js  testJLA-clang.sh  (+1 more)
doc/: CMakeLists.txt  makeDocs.sh
doc/source/: compiling.rst  conf.py  installation.rst  knownIssues.rst
doc/source/_static/: haxes.css
doc/source/dataDesc/: dataDesc.rst  dg.rst  graph.rst  molEnc.rst  rule.rst  term.rst
doc/source/dgStrat/: dgStrat.rst
doc/source/exe/: index.rst
doc/source/extensions/: solarized_modified.py
doc/source/formats/: dfs.rst  dg.rst  dot.rst  gml.rst  index.rst  mdl.rst  smiles.rst  tikz.rst
doc/source/libmod/: api.rst  index.rst
doc/source/modWrapper/: modWrapper.rst
doc/source/pymod/: api.rst  extensions.rst  index.rst  pymod.rst
examples/pymod_extension/: CMakeLists.txt
libs/gml/: CMakeLists.txt
libs/gml/src/: converter_expressions.cpp  parser.cpp  value_type.cpp
libs/gml/test/: test_gml.cpp
libs/jla_boost/: CMakeLists.txt
libs/jla_boost/test/: common_subgraph.cpp  vf2.cpp
libs/libmod/: BuildConfig.hpp.in  CMakeLists.txt  modConfig.cmake
libs/post_mod/: CMakeLists.txt
libs/pymod/: CMakeLists.txt
libs/pymod/redirector/: setup.cfg.in
libs/pymodutils/: CMakeLists.txt
test/: CMakeLists.txt
test/cmake_add_subdirectory/: CMakeLists.txt
test/cmake_add_subdirectory/project/: CMakeLists.txt
test/cmake_import/: CMakeLists.txt
test/cmake_import/project/: CMakeLists.txt  main.cpp
test/cpp/: Chem.cpp  Function.cpp
test/cpp/dg/: build.cpp  dynamicdg.cpp  match_network.cpp  printer.cpp  strategies.cpp
test/cpp/graph/: graph.cpp  graphInterface.cpp  union.cpp
test/cpp/rule/: graphInterface.cpp  labelledRule.cpp
test/py/: DGSmilesProblem.py  chem.py  config.py  derivation.py  function.py  isotopeDepict.py  misc.py  molDepiction.py  parseReactionSmiles.py  post.py  radical.py  runAll.sh  uniqueFilePrefix.py  vector.py  xxx_graphInterface.py  xxx_helpers.py
test/py/dg/: 000_basic.py  001_graphInterface.py  010_find.py  019_dump.py  020_build_addDerivation.py  021_build_addHyperEdge.py  030_build_apply.py  035_build_apply_nonProper.py  040_build_basic.py  060_build_apply.py  100_execute_basic.py  101_build_execute_add.py  102_build_execute_sequence.py  103_build_execute_parallel.py  103_build_execute_rule.py  104_build_execute_filter.py  105_build_execute_execute.py  120_build_execute_rule.py  121_build_execute_rule.py  121_build_execute_rule_splitToIsomorphic.py  129_build_execute_rule_splitToIsomorphic.py  140_build_execute_derivationPredicates.py  141_build_execute_revive.py  142_build_execute_repeat.py  1xx_execute_helpers.py  400_printer.py  401_printer_using.py  402_printer_latex_escape.py  410_printData.py  411_printData_using.py  449_printNonHyper.py  450_print_dpo.py  450_print_dpo_fail.py  451_print_dpo_no_openbabel.py  451_print_dpo_open_babel.py  452_print_dpo_graphviz.py  500_build_addAbstract.py  900_dgDerivations.py  dg.py  dgDepiction.py  (+7 more)
test/py/dgStrat/: add.py  common.py  derivationPredicates.py  execute.py  filter.py  parallel.py  repeat.py  revive.py  rule.py  sequence.py  sort.py  take.py  testSplitToIsomorphs.py
test/py/formoseCommon/: aldol_addition_backward.gml  aldol_addition_backward_H.gml  aldol_addition_forward.gml  aldol_addition_forward_H.gml  grammar.py  grammar_H.py  keto_enol_backward.gml  keto_enol_forward.gml  test.py
test/py/graph/: 010_basic_loading.py  020_graphDFS.py  040_gml.py  110_basic.py  115_graphInterface.py  120_externalIds.py  121_loadingWarnings.py  200_morphisms_basic.py  201_morphisms.py  201_morphisms_string.py  202_morphisms_term.py  250_aut.py  2xx_morphisms_helpers.py  301_image.py  800_printer.py  801_printer_graphviz.py  900_union.py  graph.gml  graph.py  graphExtId.py  graphPerm.py  smilesId.py  topo.py  unionPrint.py
test/py/matchConstraints/: loadInvert.py  shortestPath.py
test/py/pppCommon/: dgStrict.py  grammar.py
test/py/rc/: 000_rules.py  010_base_test.py  500_compositionMatch.py  501_compositionMatch_labelled_composeAll.py  checks.py  rules.py  test.py  unification.py  xxx_base_checks.py
test/py/rcEval/: common.py  composeCommon.py  composeParallel.py  composeSub.py  composeSuper.py  convertGraph.py  rule.py  testFull.py  union.py
test/py/rule/: 001_gml_interface.py  001_loadFail.py  002_gml_loadFail.py  002_loadTopoFail.py  003_gml_loadTopoFail.py  003_loadConstraintsFail.py  004_basic_loading.py  004_gml_loadConstraintsFail.py  010_basic.py  010_gml_basic_structure.py  030_gml_stereo_loadFail.py  042_isomorphicLeftRight.py  049_gml_externalIds.py  100_ruleInterface.py  101_dfs_basic_loading.py  102_dfs_loadFail.py  103_dfs_topo.py  110_dfs_basic_structure.py  110_extId.py  111_dfs_load_implicit.py  112_dfs_whitespace.py  149_dfs_externalIds.py  200_isomorphismLeftRight.py  500_basic.py  500_print.py  501_numComponents.py  510_ruleInterface.py  520_inverse.py  800_morphism.py  850_isomorphismLeftRight.py  900_print.py  901_print_graphviz.py  910_depict.py  911_depict_hydrogen_collapse.py  920_depict_stereo.py  labelType.py  rule.gml  rule.py  ruleExtId.py  ruleGML.py  (+4 more)
test/py/smiles/: doOBabelTests.sh  genSymbolJumpTable.py  problematic.py  rhea.py  smiles.py  smilesToDimacs.py  smiles_cansmi_roundtrip.py  smiles_nci.py
test/py/stereo/: 00_geometryAndEmbedding.py  01_geometry.py  02_embedding.py  03_completeDeduce.py  04_graphFix.py  10_errors.py  20_morphismGraph.py  30_morphismRule.py  common.py  graphDepiction.py  ruleDepiction.py  ruleGML.py  smiles.py  smilesAll.py  testTetraRule.py
test/py/term/: counter.py  makeVars.py  (+2 more)
(+1683 files in other folders)
